@@ -36,7 +36,18 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+java {
+    modularity.inferModulePath = true
+}
 
+sourceSets {
+    main {
+        resources {
+            srcDirs = ["src/main/resources"]
+            includes = ["**/*.*"]
+        }
+    }
+}
 mainClassName = "com.paipeng.cptesseractocrapp.MainApp"
 
 
@@ -50,8 +61,8 @@ dependencies {
     // https://mvnrepository.com/artifact/net.java.dev.jna/jna
     implementation group: 'net.java.dev.jna', name: 'jna', version: '5.14.0'
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
-    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.14'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.14'
+    //implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.14'
+    //implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.14'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.12'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
@@ -143,7 +154,11 @@ jlink {
     println "JavaHome: " + System.getProperty("java.home")
     setJavaHome("/opt/jdk-17.0.2.jdk/Contents/Home")
     // Some default options
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug',
+               '--compress', '2',
+               '--no-header-files',
+               //'--add-exports=ch.qos.logback.classic/ch.qos.logback.classic.model.processor=ch.qos.logback.core',
+               '--no-man-pages']
     // '--add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED', '--add-exports javafx.graphics/com.sun.javafx.font=ALL-UNNAMED'
 
     launcher{
